--- a/app/src/main/res/layout/activity_chef_post_dish.xml
+++ b/app/src/main/res/layout/activity_chef_post_dish.xml
@@ -32,35 +32,34 @@
         app:layout_constraintHorizontal_bias="0.53">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="105dp"
             android:layout_height="30dp"
-            android:id="@+id/textView"
             android:text="Dish Name"
+            android:textAlignment="center"
             android:textColor="@color/Black"
-            android:layout_marginLeft="5dp"
-            android:textSize="17sp" />
+            android:textSize="18sp" />
 
         <Spinner
             android:id="@+id/dishes"
-            android:layout_width="162dp"
+            android:layout_width="193dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="5dp"
             android:background="#D0FFFFFF"
             android:entries="@array/DishName" />
 
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/description"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:id="@+id/description"
+        android:layout_marginTop="15dp"
         android:textColorHint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.053"
-        app:layout_constraintHorizontal_bias="0.53">
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -68,21 +67,20 @@
             android:hint="Description"
             android:inputType="text"
             android:textColor="@color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/Quantity"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:id="@+id/Quantity"
+        android:layout_marginTop="15dp"
         android:textColorHint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.053"
-        app:layout_constraintHorizontal_bias="0.53">
+        app:layout_constraintTop_toBottomOf="@+id/description">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -90,21 +88,20 @@
             android:hint="Quantity"
             android:inputType="number"
             android:textColor="@color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/price"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:id="@+id/price"
+        android:layout_marginTop="15dp"
         android:textColorHint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Quantity"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.053"
-        app:layout_constraintHorizontal_bias="0.53">
+        app:layout_constraintTop_toBottomOf="@+id/Quantity">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -112,7 +109,7 @@
             android:hint="Price"
             android:inputType="number"
             android:textColor="@color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
