--- a/app/src/main/res/layout/activity_choose_one.xml
+++ b/app/src/main/res/layout/activity_choose_one.xml
@@ -7,6 +7,13 @@
     android:layout_height="fill_parent"
     tools:context=".ChooseOne">
 
+    <ImageView
+        android:id="@+id/backBtn"
+        android:layout_width="70dp"
+        android:layout_height="80dp"
+        android:src="@drawable/ic_back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearlayout"
