--- a/app/src/main/res/layout/fragment_customerprofile.xml
+++ b/app/src/main/res/layout/fragment_customerprofile.xml
@@ -69,7 +69,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
                             android:gravity="right"
-                            android:hint="fname"
+                            android:hint="First Name"
                             android:inputType="text"
                             android:textSize="17sp" />
 
@@ -123,8 +123,7 @@
                             android:gravity="right"
                             android:inputType="text"
                             android:textSize="17sp"
-                            tools:hint="lastName" />
-
+                            tools:hint="Last Name" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -171,14 +170,13 @@
                         android:layout_height="wrap_content"
                         android:gravity="right">
 
-
-                        <TextView
+                        <EditText
                             android:id="@+id/mobilenumber"
-                            android:layout_width="171dp"
+                            android:layout_width="172dp"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
                             android:gravity="right"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:textSize="17sp"
                             tools:hint="mobileNum" />
 
@@ -227,16 +225,15 @@
                         android:layout_height="wrap_content"
                         android:gravity="right">
 
-
-                        <TextView
+                        <EditText
                             android:id="@+id/emailID"
-                            android:layout_width="296dp"
+                            android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
                             android:gravity="right"
                             android:inputType="textEmailAddress"
-                            android:text=""
-                            android:textSize="17sp" />
+                            android:textSize="17sp"
+                            tools:hint="Email Address" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -276,19 +273,21 @@
                         android:text="Password"
                         android:textColor="@color/Blacklogo"
                         android:textSize="16dp" />
-                    <TextView
-                        android:id="@+id/psT"
-                        android:layout_width="151dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
-                        android:layout_weight="1"
+                        android:gravity="right">
 
-                        android:drawablePadding="10dp"
-                        android:maxWidth="300dp"
-
-                        android:textColor="@color/Blacklogo"
-                        android:textSize="16dp" />
-
+                        <EditText
+                            android:id="@+id/psT"
+                            android:layout_width="172dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="20dp"
+                            android:gravity="right"
+                            android:inputType="text"
+                            android:textSize="17sp"
+                            tools:hint="Password" />
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -313,7 +312,6 @@
                     android:layout_marginBottom="5dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
-
 
                     <TextView
                         android:id="@+id/Address"
